# Xmake_ws

./: 111.lua  README.md
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history
benchbox/: makefile
hello/: xmake.lua
hello/.xmake/linux/x86_64/: xmake.conf
hello/.xmake/linux/x86_64/cache/: config  detect  history  option  requires
hello/src/: main.c
motor_controller/: xmake.lua
motor_controller/.xmake/linux/x86_64/: xmake.conf
motor_controller/.xmake/linux/x86_64/cache/: config  detect  history  option
motor_controller/include/: cmd.h  cmdResponse.h
motor_controller/include/i/: cmdRequest.h
motor_controller/internal_deps/autoscrubber_services/: CMakeLists.txt  package.xml
motor_controller/src/: motor_controller.cpp
rostopic_demo/: xmake.lua
rostopic_demo/.xmake/linux/x86_64/: xmake.conf
rostopic_demo/.xmake/linux/x86_64/cache/: config  detect  history  option  repository
rostopic_demo/include/: gps.h
rostopic_demo/src/: listener.cpp  talker.cpp
rules/: README.md
service_demo/: xmake.lua
service_demo/.xmake/linux/x86_64/: xmake.conf
service_demo/.xmake/linux/x86_64/cache/: config  detect  history  option
service_demo/include/: Greeting.h
service_demo/src/: client.cpp  server.cpp
test/: xmake.lua
test/src/: main.c
