<package>
    <name>autoscrubber_services</name>
    <version>1.0.0</version>
    <description>Holds the service description and relevant messages for the autoscrubber package</description>
    <author>liyouchiao</author>
    <maintainer email="lc@1061749753.com.com">Cameron</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>diagnostic_msgs</run_depend>

</package>

